--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,22 @@
-requests
-certifi
-confluent-kafka[avro,json,protobuf]>=1.4.2
-RPi.GPIO
-picamera
-twython
+attrs==21.2.0
+avro-python3==1.10.0
+certifi==2021.5.30
+chardet==4.0.0
+confluent-kafka==1.7.0
+fastavro==1.4.1
+idna==2.10
+importlib-metadata==4.5.0
+jsonschema==3.2.0
+oauthlib==3.1.1
+picamera==1.13
+Pillow==8.2.0
+protobuf==3.17.3
+pyrsistent==0.17.3
+requests==2.25.1
+requests-oauthlib==1.3.0
+RPi.GPIO==0.7.0
+six==1.16.0
+twython==3.8.2
+typing-extensions==3.10.0.0
+urllib3==1.26.5
+zipp==3.4.1
