--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ idna==2.10
 importlib-metadata==4.5.0
 jsonschema==3.2.0
 oauthlib==3.1.1
+paho-mqtt==1.5.1
 picamera==1.13
 Pillow==8.2.0
 protobuf==3.17.3
